--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@nestjs/graphql": "^7.10.6",
     "@nestjs/platform-express": "^7.6.15",
     "apollo-server-express": "^2.25.0",
-    "bignumber.js": "^9.0.1",
     "graphql": "^15.5.0",
+    "graphql-scalars": "^1.9.3",
     "graphql-tools": "^7.0.5",
     "node-fetch": "^2.6.1",
     "reflect-metadata": "^0.1.13",
